# pressgangcli

./: Makefile.am  README.md  autogen.sh  configure.ac  pressgangcli.spec.in
scripts/: config.py  pressgang-config  pressgang-config.py  pressgang-edit  pressgang-get  pressgang-get.py  pressgang-put  pressgang-put.py  topic.py
